fix a bunch of dark mode issues including hardcoded white values

--- a/assets/src/components/resource/Editors.scss
+++ b/assets/src/components/resource/Editors.scss
@@ -10,11 +10,11 @@
 .activity,
 .activity-editor {
   max-width: 768px;
-  margin: 0 auto;
+  margin: 20px auto;
 
   .card {
     border: 0;
-    background-color: #f8f9fa;
+    background-color: $gray-100;
     @extend .mb-3;
   }
 
